# rust-recipes-for-beginners

./: README.md  book.toml  chapter_10.md  readme.sh
examples/: Cargo.toml
examples/chapter-1/my_first_app/: Cargo.toml
examples/chapter-1/my_rand_project/: Cargo.toml
examples/chapter-1/my_user_app/: Cargo.toml
examples/chapter-1/my_user_library/: Cargo.toml
examples/chapter-1/my_workspace/: Cargo.toml
examples/chapter-2/: Cargo.toml
examples/chapter-2/examples/: and_then.rs  and_then_result.rs  enumerate.rs  filter_basic.rs  filter_map.rs  filter_struct.rs  flat_map.rs  flatten_option.rs  flatten_vector.rs  flatter_result.rs  fold_complex.rs  fold_numbers.rs  fold_strings.rs  if_let.rs  inspect.rs  inspect_complex.rs  into_iter.rs  iter.rs  iter_mut.rs  lazy_benefits.rs  lazy_collect.rs  lazy_foreach.rs  lazy_sum.rs  map_err.rs  match.rs  match_iterator.rs  match_option.rs  match_result.rs  match_tuple.rs  or_else.rs  partition_odd.rs  partition_strings.rs  sort.rs  sort_by.rs  sort_closure.rs  unwrap_or.rs  zip.rs  zip_three.rs
examples/chapter-3/anyhow/: Cargo.toml
examples/chapter-3/thiserror/: Cargo.toml
examples/chapter-4/: Cargo.toml
examples/chapter-4/enumeration/: Cargo.toml
examples/chapter-4/examples/: var.rs
examples/chapter-4/greet-cli/: Cargo.toml
examples/chapter-4/my-cli-uppercase/: Cargo.toml
examples/chapter-4/sub-command/: Cargo.toml
examples/chapter-4/validation/: Cargo.toml
examples/chapter-4/values/: Cargo.toml
examples/chapter-4/var_override/: Cargo.toml
examples/chapter-5/env-logger/: Cargo.toml
examples/chapter-5/flexi_logger/: Cargo.toml
examples/chapter-5/opentelemetry/: Cargo.toml
src/: SUMMARY.md  (+8 more)
(+43 files in other folders)
